fix open api docs
